app/innerPage.module.css
.page {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: var(--font-manrope), system-ui, sans-serif;
  padding: 0rem 10px 100px;
  max-width: 1010px;
  margin: 0 auto;
  width: 100%;
  padding-top: 100px;
}

.pageProject {
    flex: 1;
  display: flex;
  flex-direction: column;
  font-family: var(--font-manrope), system-ui, sans-serif;
  padding: 0rem 1rem 100px;
  max-width: 1010px;
  margin: 0 auto;
  width: 100%;
}

.pageDetail {
  flex: 1;
  display: flex;
  flex-direction: column;
  font-family: var(--font-manrope), system-ui, sans-serif;
  padding: 0 1.5rem 100px;
  width: 100%;
  max-width: none;
  margin-bottom: 0;
}

.pageDetailTop {
  padding-top: 100px;
}

.pageDetailSection {
  width: 100%;
  max-width: 1010px;
  margin: 0 auto;
}

.titleContainer {
  margin: auto;
  text-align: center;
  align-items: center;
}

.cardColumn {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 12px;
  width: 100%;
  margin-top: 30px;
  align-self: center;
  margin-bottom: 100px;
}

.moreProjectsTitle {
  margin-top: 118px;
}

.moreArticlesTitle {
  margin-top: 90px;
}

.joinTitle {
  margin-top: 110px;
}

.showcaseInsights {
  display: flex;
  flex-direction: column;
  gap: 24px;
  width: 100%;
  max-width: 550px;
  margin: 0 auto 32px;
}

@media (max-width: 640px) {
  .showcaseInsights {
    gap: 0;
  }

  .pageDetail{
    padding: 0 10px 0rem;
    margin-bottom: 0;
  }

  .pageJournal{
    padding: 6rem 10px 0rem;
  }

  .page{
    padding: 100px 10px 0rem;
    margin-bottom: 10px;
  }

  .cardColumn{
    margin-top: 40px;
    margin-bottom: 60px;
  }

  .moreProjectsTitle,
  .moreArticlesTitle {
    margin-top: 60px;
  }

  .joinTitle {
    margin-top: 60px;
  }
}

